--- a/baseballdatabasepj.ipynb
+++ b/baseballdatabasepj.ipynb
@@ -2,11 +2,410 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hit = pd.read_csv(\"2023hitterstats.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_15832\\990155713.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  filtered_hit['Rk'] = filtered_hit.index +1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#remove pitchers from the list\n",
+    "\n",
+    "def remove_pitchers(hit):\n",
+    "    filtered_hit = hit[hit['Pos Summary'] != '1']\n",
+    "    filtered_hit.reset_index(drop=True,inplace=True)\n",
+    "    filtered_hit['Rk'] = filtered_hit.index +1\n",
+    "    return filtered_hit\n",
+    "\n",
+    "hit = remove_pitchers(hit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rk</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tm</th>\n",
+       "      <th>Lg</th>\n",
+       "      <th>G</th>\n",
+       "      <th>PA</th>\n",
+       "      <th>AB</th>\n",
+       "      <th>R</th>\n",
+       "      <th>H</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SLG</th>\n",
+       "      <th>OPS</th>\n",
+       "      <th>OPS+</th>\n",
+       "      <th>TB</th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>HBP</th>\n",
+       "      <th>SH</th>\n",
+       "      <th>SF</th>\n",
+       "      <th>IBB</th>\n",
+       "      <th>Pos Summary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>CJ Abrams</td>\n",
+       "      <td>22</td>\n",
+       "      <td>WSN</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>151</td>\n",
+       "      <td>614</td>\n",
+       "      <td>563</td>\n",
+       "      <td>83</td>\n",
+       "      <td>138</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.412</td>\n",
+       "      <td>0.712</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>232</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>*6/H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>José Abreu</td>\n",
+       "      <td>36</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>141</td>\n",
+       "      <td>594</td>\n",
+       "      <td>540</td>\n",
+       "      <td>62</td>\n",
+       "      <td>128</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.383</td>\n",
+       "      <td>0.680</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>207</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>*3/D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Wilyer Abreu</td>\n",
+       "      <td>24</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>28</td>\n",
+       "      <td>85</td>\n",
+       "      <td>76</td>\n",
+       "      <td>10</td>\n",
+       "      <td>24</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.474</td>\n",
+       "      <td>0.862</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>87/H9D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Ronald Acuña Jr.</td>\n",
+       "      <td>25</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>159</td>\n",
+       "      <td>735</td>\n",
+       "      <td>643</td>\n",
+       "      <td>149</td>\n",
+       "      <td>217</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.596</td>\n",
+       "      <td>1.012</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>383</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>*9/D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Willy Adames</td>\n",
+       "      <td>27</td>\n",
+       "      <td>MIL</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>149</td>\n",
+       "      <td>638</td>\n",
+       "      <td>553</td>\n",
+       "      <td>73</td>\n",
+       "      <td>120</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.407</td>\n",
+       "      <td>0.717</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>225</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>*6/D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>771</th>\n",
+       "      <td>772</td>\n",
+       "      <td>Jared Young</td>\n",
+       "      <td>27</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>16</td>\n",
+       "      <td>47</td>\n",
+       "      <td>43</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.465</td>\n",
+       "      <td>0.720</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3/DH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772</th>\n",
+       "      <td>773</td>\n",
+       "      <td>Seby Zavala</td>\n",
+       "      <td>29</td>\n",
+       "      <td>TOT</td>\n",
+       "      <td>MLB</td>\n",
+       "      <td>73</td>\n",
+       "      <td>193</td>\n",
+       "      <td>175</td>\n",
+       "      <td>17</td>\n",
+       "      <td>30</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.314</td>\n",
+       "      <td>0.545</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2/H1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>773</th>\n",
+       "      <td>774</td>\n",
+       "      <td>Seby Zavala</td>\n",
+       "      <td>29</td>\n",
+       "      <td>CHW</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>66</td>\n",
+       "      <td>176</td>\n",
+       "      <td>161</td>\n",
+       "      <td>15</td>\n",
+       "      <td>25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.304</td>\n",
+       "      <td>0.511</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2/H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>774</th>\n",
+       "      <td>775</td>\n",
+       "      <td>Seby Zavala</td>\n",
+       "      <td>29</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.429</td>\n",
+       "      <td>0.899</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/21H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>775</th>\n",
+       "      <td>776</td>\n",
+       "      <td>Mike Zunino</td>\n",
+       "      <td>32</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>42</td>\n",
+       "      <td>140</td>\n",
+       "      <td>124</td>\n",
+       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.306</td>\n",
+       "      <td>0.578</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>776 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Rk              Name  Age   Tm   Lg    G   PA   AB    R    H  ...  \\\n",
+       "0      1         CJ Abrams   22  WSN   NL  151  614  563   83  138  ...   \n",
+       "1      2        José Abreu   36  HOU   AL  141  594  540   62  128  ...   \n",
+       "2      3      Wilyer Abreu   24  BOS   AL   28   85   76   10   24  ...   \n",
+       "3      4  Ronald Acuña Jr.   25  ATL   NL  159  735  643  149  217  ...   \n",
+       "4      5      Willy Adames   27  MIL   NL  149  638  553   73  120  ...   \n",
+       "..   ...               ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
+       "771  772       Jared Young   27  CHC   NL   16   47   43    8    8  ...   \n",
+       "772  773       Seby Zavala   29  TOT  MLB   73  193  175   17   30  ...   \n",
+       "773  774       Seby Zavala   29  CHW   AL   66  176  161   15   25  ...   \n",
+       "774  775       Seby Zavala   29  ARI   NL    7   17   14    2    5  ...   \n",
+       "775  776       Mike Zunino   32  CLE   AL   42  140  124   11   22  ...   \n",
+       "\n",
+       "       SLG    OPS   OPS+   TB  GDP  HBP  SH  SF  IBB  Pos Summary  \n",
+       "0    0.412  0.712   97.0  232    7   13   3   3    2         *6/H  \n",
+       "1    0.383  0.680   87.0  207   16    6   0   6    1         *3/D  \n",
+       "2    0.474  0.862  132.0   36    0    0   0   0    0       87/H9D  \n",
+       "3    0.596  1.012  169.0  383   15    9   0   3    3         *9/D  \n",
+       "4    0.407  0.717   93.0  225   12    6   0   6    1         *6/D  \n",
+       "..     ...    ...    ...  ...  ...  ...  ..  ..  ...          ...  \n",
+       "771  0.465  0.720   91.0   20    1    1   0   0    0         3/DH  \n",
+       "772  0.314  0.545   48.0   55    4    2   2   2    0         2/H1  \n",
+       "773  0.304  0.511   39.0   49    4    1   2   2    0          2/H  \n",
+       "774  0.429  0.899  151.0    6    0    1   0   0    0         /21H  \n",
+       "775  0.306  0.578   61.0   38    3    1   0   0    0            2  \n",
+       "\n",
+       "[776 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hit"
    ]
   },
   {
@@ -18,8 +417,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
